--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,17 @@
 {
+
+    "name": "rubricate/container",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Estefanio NS",
+            "email": "estefanions@gmail.com"
+        }
+    ],
     "require": {
         "xtreamwayz/pimple-container-interop": "^1.0"
     },
-"autoload": {
+    "autoload": {
         "psr-4": {
             "Rubricate\\Container\\": "Rubricate/Container/"
         }
